--- a/part-a/ex-1/eventListener.html
+++ b/part-a/ex-1/eventListener.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html>
 
-<body>
+    <body>
 
-    <h2>JavaScript addEventListener()</h2>
+        <h2>JavaScript addEventListener()</h2>
 
-    <p>This example uses the addEventListener() method to add two click events to the same button.</p>
+        <p>This example uses the addEventListener() method to add two click events to the same button.</p>
 
-    <button id="myBtn">Try it</button>
+        <button id="myBtn">Try it</button>
 
-    <script>
-        var x = document.getElementById("myBtn");
-        x.addEventListener("click", myFunction);
-        x.addEventListener("click", someOtherFunction);
+        <script>
+            var x = document.getElementById("myBtn");
+            x.addEventListener("click", myFunction);
+            x.addEventListener("click", someOtherFunction);
 
-        function myFunction() {
-            alert("Hello World!");
-        }
+            function myFunction() {
+                alert("Hello World!");
+            }
 
-        function someOtherFunction() {
-            alert("This function was also executed!");
-        }
-    </script> 
+            function someOtherFunction() {
+                alert("This function was also executed!");
+            }
+        </script> 
+    </body>
+
+</html>
